# kino

./: .gitignore  Cargo.toml  LICENSE  PRD.md  README.md  STATE.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
android/keystore/: README.md  kino-dev.keystore
android/player-plugin/: Cargo.toml  build.rs
android/player-plugin/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro  settings.gradle
android/player-plugin/android/src/main/: AndroidManifest.xml
android/player-plugin/android/src/main/java/dev/kino/player/: Capabilities.kt  DvAwareCodecSelector.kt  PlayerActivity.kt  PlayerPlugin.kt  PlayerSession.kt  SubtitleSupport.kt
android/player-plugin/android/src/main/java/dev/kino/player/args/: Args.kt
android/player-plugin/android/src/main/java/dev/kino/player/events/: Events.kt
android/player-plugin/android/src/main/res/layout/: activity_player.xml  kino_player_controls.xml
android/player-plugin/android/src/main/res/values/: strings.xml  themes.xml
android/player-plugin/permissions/autogenerated/: reference.md
android/player-plugin/permissions/autogenerated/commands/: drain_events.toml  select_audio_track.toml  select_subtitle_track.toml  set_paused.toml  tracks.toml
android/player-plugin/permissions/schemas/: schema.json
android/player-plugin/src/: cache.rs  error.rs  lib.rs  mobile.rs  models.rs  stub.rs
crates/kino-addons/: Cargo.toml
crates/kino-addons/src/: client.rs  lib.rs  manifest.rs  parse.rs  protocol.rs  recommended.rs  url.rs
crates/kino-core/: Cargo.toml
crates/kino-core/src/: addon.rs  availability.rs  constants.rs  cw.rs  db.rs  http.rs  lib.rs  stream.rs  title.rs
crates/kino-metadata/: Cargo.toml
crates/kino-metadata/src/: artwork.rs  error.rs  fanart.rs  http.rs  lib.rs  tmdb.rs  trakt.rs  trending.rs  tvdb.rs
crates/kino-player/: Cargo.toml
crates/kino-player/src/: error.rs  event.rs  handle.rs  ipc.rs  lib.rs  libmpv.rs  mpv.rs  state.rs  surface.rs  tracks.rs
crates/kino-server/: Cargo.toml
crates/kino-server/assets/: mpv.conf
crates/kino-server/src/: lib.rs  range.rs  server.rs
crates/kino-server/tests/: stream_roundtrip.rs
crates/kino-torrent/: Cargo.toml
crates/kino-torrent/src/: engine.rs  lib.rs  monitor.rs  scheduler.rs  stats.rs  trackers.rs
crates/kino-torrent/tests/: buffer_monitor.rs
docs/upstream/: librqbit-pr.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  i18n.test.ts  i18n.ts  index.tsx  styles.css  test-setup.ts
frontend/src/components/: BufferOverlay.test.tsx  BufferOverlay.tsx  Focusable.test.tsx  Focusable.tsx  NavRail.test.tsx  NavRail.tsx  Row.test.tsx  Row.tsx  Tile.test.tsx  Tile.tsx
frontend/src/input/: focus.test.ts  focus.ts  gamepad.test.ts  gamepad.ts  index.ts  keyboard.test.ts  keyboard.ts  keymap.test.ts  keymap.ts  profile.test.ts  profile.ts  touch.ts
frontend/src/lib/: cw.test.ts  cw.ts  displaySettings.ts  playerSession.test.ts  playerSession.ts  tauri.ts
frontend/src/locales/: en.json  fr.json
frontend/src/routes/: Home.test.tsx  Home.tsx  HomeView.test.tsx  Movies.tsx  Player.test.tsx  Player.tsx  Search.test.tsx  Search.tsx  Series.tsx  Settings.test.tsx  Settings.tsx  TitleDetail.test.tsx  TitleDetail.tsx
migrations/: 0001_init.sql
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache_fs.rs  commands.rs  lib.rs  logs.rs  main.rs  paths.rs  settings.rs
