[package]
name = "kino-app"
description = "kino Tauri 2 host binary (single process: backend + axum server + librqbit + frontend window)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# `kino-app` is the binary the Tauri CLI drives on every target. The library
# crate exists so Tauri's Android scaffold (which expects a `cdylib` named
# after the package) can link the same code without a second source tree.
[lib]
name = "kino_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kino-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

# Workspace crates wired in as each feature lands.
# F-002: kino-core supplies the Db handle, the CW / addon types, and the
# typed persistence API the Tauri commands wrap.
kino-core = { path = "../crates/kino-core" }
# F-003: kino-metadata supplies the per-provider HTTP clients the
# `test_<provider>` Tauri commands invoke.
kino-metadata = { path = "../crates/kino-metadata" }
# F-007: kino-addons supplies the Stremio addon protocol client driving
# install / list / catalog / meta / stream calls.
kino-addons = { path = "../crates/kino-addons" }

# Platform-aware directory resolution for the per-target DB path. PRD §3
# Storage layout: `$XDG_CONFIG_HOME/kino/` on Linux. Android resolves via the
# Tauri AppHandle path resolver.
dirs = "5"

# F-004: trending aggregator + day-boundary cache key need UTC date math and
# concurrent provider fetches.
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
# F-006 unit tests stand up mock Stremio stream endpoints.
wiremock = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
