[package]
name = "kino-app"
description = "kino Tauri 2 host binary (single process: backend + axum server + librqbit + frontend window)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# `kino-app` is the binary the Tauri CLI drives on every target. The library
# crate exists so Tauri's Android scaffold (which expects a `cdylib` named
# after the package) can link the same code without a second source tree.
[lib]
name = "kino_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kino-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

# Workspace crates wired in as each feature lands.
# F-002: kino-core supplies the Db handle, the CW / addon types, and the
# typed persistence API the Tauri commands wrap.
kino-core = { path = "../crates/kino-core" }
# F-003: kino-metadata supplies the per-provider HTTP clients the
# `test_<provider>` Tauri commands invoke.
kino-metadata = { path = "../crates/kino-metadata" }
# F-007: kino-addons supplies the Stremio addon protocol client driving
# install / list / catalog / meta / stream calls.
kino-addons = { path = "../crates/kino-addons" }
# F-013: embedded torrent engine + local HTTP server (`start_playback` /
# `stop_playback` Tauri commands).
kino-torrent = { path = "../crates/kino-torrent" }
kino-server = { path = "../crates/kino-server" }
# F-015: native player driver (Linux mpv subprocess). The Android side of
# F-015 lives in `android/player-plugin/` and is wired through a Tauri 2
# mobile plugin (`tauri-plugin-kino-player`) registered in `lib.rs`.
kino-player = { path = "../crates/kino-player" }
tauri-plugin-kino-player = { path = "../android/player-plugin" }
# F-016 §4: native directory picker. Tauri 2 first-party plugin; uses
# zenity/kdialog/portal on Linux, SAF on Android. ADR-095's deferral
# (text-input only) is re-classified as a §6A regression by ADR-118;
# this plugin closes it. No new Android manifest permissions are
# required — SAF runs through the system file-picker activity and
# returns a content:// URI without persisted access by default.
tauri-plugin-dialog = "2"
bytes = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
mime_guess = { workspace = true }

# Platform-aware directory resolution for the per-target DB path. PRD §3
# Storage layout: `$XDG_CONFIG_HOME/kino/` on Linux. Android resolves via the
# Tauri AppHandle path resolver.
dirs = "5"

# F-004: trending aggregator + day-boundary cache key need UTC date math and
# concurrent provider fetches.
chrono = { workspace = true }
tokio = { workspace = true }

# F-010: title-detail stream-row parsing extracts seeders + filesize from
# addon-supplied stream titles via small regex patterns. The §8 quality /
# HDR / audio / codec regex set lives in `kino-addons::parse`.
regex = { workspace = true }

# F-016 Settings → About: daily-rotating log file under the app config dir
# feeds the `export_logs` command (zips the logs folder into a user-chosen
# location). `tracing-appender` is the official `tracing` ecosystem file
# rotator; `zip` produces the archive.
tracing-appender = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
# F-006 unit tests stand up mock Stremio stream endpoints.
wiremock = { workspace = true }
# F-016 cache/logs filesystem helpers run their unit tests against a
# scratch directory; tempfile gives a per-test cleanup-safe path.
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
