[package]
name = "kino-app"
description = "kino Tauri 2 host binary (single process: backend + axum server + librqbit + frontend window)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# `kino-app` is the binary the Tauri CLI drives on every target. The library
# crate exists so Tauri's Android scaffold (which expects a `cdylib` named
# after the package) can link the same code without a second source tree.
[lib]
name = "kino_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kino-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

# Workspace crates wired in as each feature lands.
# F-002: kino-core supplies the Db handle, the CW / addon types, and the
# typed persistence API the Tauri commands wrap.
kino-core = { path = "../crates/kino-core" }
# F-003: kino-metadata supplies the per-provider HTTP clients the
# `test_<provider>` Tauri commands invoke.
kino-metadata = { path = "../crates/kino-metadata" }
# F-007: kino-addons supplies the Stremio addon protocol client driving
# install / list / catalog / meta / stream calls.
kino-addons = { path = "../crates/kino-addons" }
# F-013: embedded torrent engine + local HTTP server (`start_playback` /
# `stop_playback` Tauri commands).
kino-torrent = { path = "../crates/kino-torrent" }
kino-server = { path = "../crates/kino-server" }
# F-015: native player driver (Linux mpv subprocess). The Android side of
# F-015 lives in `android/player-plugin/` and is wired through a Tauri 2
# mobile plugin (`tauri-plugin-kino-player`) registered in `lib.rs`.
kino-player = { path = "../crates/kino-player" }
tauri-plugin-kino-player = { path = "../android/player-plugin" }
# F-016 §4: native directory picker. Tauri 2 first-party plugin; uses
# zenity/kdialog/portal on Linux, SAF on Android. ADR-095's deferral
# (text-input only) is re-classified as a §6A regression by ADR-118;
# this plugin closes it. No new Android manifest permissions are
# required — SAF runs through the system file-picker activity and
# returns a content:// URI without persisted access by default.
tauri-plugin-dialog = "2"
bytes = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
mime_guess = { workspace = true }

# Platform-aware directory resolution for the per-target DB path. PRD §3
# Storage layout: `$XDG_CONFIG_HOME/kino/` on Linux. Android resolves via the
# Tauri AppHandle path resolver.
dirs = "5"

# F-004: trending aggregator + day-boundary cache key need UTC date math and
# concurrent provider fetches.
chrono = { workspace = true }
tokio = { workspace = true }

# F-010: title-detail stream-row parsing extracts seeders + filesize from
# addon-supplied stream titles via small regex patterns. The §8 quality /
# HDR / audio / codec regex set lives in `kino-addons::parse`.
regex = { workspace = true }

# F-016 Settings → About: daily-rotating log file under the app config dir
# feeds the `export_logs` command (zips the logs folder into a user-chosen
# location). `tracing-appender` is the official `tracing` ecosystem file
# rotator; `zip` produces the archive.
tracing-appender = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
# F-006 unit tests stand up mock Stremio stream endpoints.
wiremock = { workspace = true }
# F-016 cache/logs filesystem helpers run their unit tests against a
# scratch directory; tempfile gives a per-test cleanup-safe path.
tempfile = "3"

[features]
# F-015 Linux libmpv in-process driver is the v1 default (Session 044
# closes the §6A regression). The default builds link against system
# libmpv 0.37 / libwebkit2gtk-4.1 / libgtk-3 / libepoxy (the apt
# packages enumerated in `.github/workflows/ci.yml`'s Linux jobs and
# `tauri.conf.json::bundle.linux.deb.depends`). Session 037 implemented
# the driver, Session 038 wired the CI matrix + bundle deps, Sessions
# 037-042 queued the default-flip behind §6B-1; Session 044 ran the
# self-verification (build + clippy + 447 tests + binary launch on the
# Ubuntu 24.04 agent container) and flipped the default.
default = ["libmpv-inprocess"]
# F-015 Linux libmpv in-process driver (Session 037 / ADR-133 Route B).
# Forwards to `kino-player`'s same-named feature; when ON the host's
# setup() hook injects the GTK overlay surgery and constructs
# `LibmpvPlayer` for `spawn_platform_player` to vend on Linux. When OFF
# the subprocess `MpvPlayer` (ADR-108) remains the Linux driver and no
# `libmpv2` link-time dependency is introduced — useful as the escape
# hatch for distros that ship without libmpv. The Session 037 fallback
# in `src-tauri/src/lib.rs::setup_libmpv_inprocess` engages
# automatically on `inject_overlay` or `LibmpvPlayer::new_attached`
# failure, so even the feature-on build keeps the subprocess driver as
# its working fallback.
libmpv-inprocess = ["kino-player/libmpv-inprocess"]
# F-015 Linux libmpv GTK-surface debug option (Session 042 / ADR-137).
# Re-enables the `KINO_LIBMPV_SURFACE_SPIKE=1` env-var path that
# Session 036 introduced and Session 037 superseded by the
# `libmpv-inprocess` feature. With this feature ON (and the env var
# set), the host invokes [`kino_player::inject_overlay`] standalone —
# performing the GtkOverlay surgery without constructing a
# `LibmpvPlayer`. The developer affordance lets one verify the surgery
# on their Linux distro WITHOUT installing `libmpv-dev` first (the
# subprocess `MpvPlayer` from ADR-108 still vends `player_open`
# requests in this configuration, so playback continues working). The
# feature is mutually exclusive with `libmpv-inprocess`: when both are
# enabled the inprocess path runs and the surface-spike path is a
# no-op (it would otherwise double-surgery the already-reparented
# webview). Default builds compile out the spike entirely.
libmpv-surface-spike = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
