[package]
name = "tauri-plugin-kino-player"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tauri 2 mobile plugin wrapping the kino Android ExoPlayer-backed PlayerActivity (PRD §F-015)."
# `links` is required by Tauri 2 mobile plugins so the Tauri CLI can discover
# the plugin's `android/` subdirectory and emit the gradle module include +
# dependency wiring into `src-tauri/gen/android/tauri.{settings,build}.gradle.kts`.
links = "tauri-plugin-kino-player"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[build-dependencies]
# Tauri's mobile-plugin build helper. Emits the per-target Kotlin / Swift
# bridge code AND tells the Tauri CLI which `android/` subdirectory to wire
# into the host app's gradle build.
tauri-plugin = { version = "2", features = ["build"] }
serde_json = { workspace = true }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Player vocabulary (`PlayerHandle`, `PlayerEvent`, `OpenRequest`, ...) lives
# in `kino-player` so the Android driver implements the same trait surface as
# the Linux mpv driver.
kino-player = { path = "../../crates/kino-player" }

[dev-dependencies]
tokio = { workspace = true }
