[package]
name = "kino-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types, settings, install_id, and DB access for kino."

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Persistence (PRD §3, §F-002). Pulls in the sqlx runtime so any consumer
# (kino-app, tests) shares one tokio runtime.
sqlx = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
