[package]
name = "kino-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types, settings, install_id, and DB access for kino."

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Persistence (PRD §3, §F-002). Pulls in the sqlx runtime so any consumer
# (kino-app, tests) shares one tokio runtime.
sqlx = { workspace = true }
tokio = { workspace = true }

# Workspace-wide HTTP machinery (PRD §F-003, §F-007; ADR-055). Lifted from
# `kino-metadata::http` in Session 008 so `kino-addons` can share the same
# locked retry policy without inverting the crate dependency graph.
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
# Session 031 (F-003 ETag handling): the new `fetch_with_etag` / ETag
# round-trip tests in `http.rs` exercise the 304 path against a mock
# server. Sharing the workspace wiremock pin keeps version drift out
# of the kino-core / kino-metadata pair.
wiremock = { workspace = true }
