[package]
name = "kino-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local HTTP server (axum, 127.0.0.1) that exposes torrent streams to the platform player."

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[dependencies]
kino-core = { path = "../kino-core" }
kino-torrent = { path = "../kino-torrent" }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true }
librqbit = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
